--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
     "autoprefixer": "^10.4.2",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
+    "happy-dom": "^17.4.4",
     "postcss": "^8.4.14",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "vitest": "^3.0.9"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
